# NebulaSSH

./: App.tsx  App.tsx.backup  LICENSE  README.md  README_ZH.md  index.css  index.html  index.tsx  locales.ts  metadata.json  package-lock.json  package.json  types.ts  utils.ts  vite.config.ts
.github/workflows/: release.yml
components/: AIModal.tsx  App.tsx  FileEditor.tsx  FloatingAIButton.tsx  Modal.tsx  NewConnectionModal.tsx  PortForwardingPanel.tsx  RightSidebar.tsx  SettingsModal.tsx  SplashScreen.tsx  TerminalContextMenu.tsx  TitleBar.tsx
components/Layout/: SplitPane.tsx  TabBar.tsx
components/SFTP/: SFTPBrowser.tsx
components/Security/: SetupMasterPassword.tsx  UnlockScreen.tsx
components/Settings/: SettingsAI.tsx  SettingsAbout.tsx  SettingsAppearance.tsx  SettingsGeneral.tsx  SettingsSecurity.tsx
components/Sidebar/: ConnectionItem.tsx  Sidebar.tsx
components/Terminal/: AIAssistant.tsx  AIMessageRenderer.tsx  CommandHistory.tsx  SaveSnippetModal.tsx  SnippetPanel.tsx  (+2 more)
contexts/: AppContext.tsx  SlotContext.tsx
hooks/: useIdleTimer.ts  useResizable.ts  useSplitPanes.ts  useTerminalContextMenu.ts
services/: mockFileSystem.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_service.rs  db.rs  db_commands.rs  lib.rs  local_files.rs  local_monitor.rs  local_term.rs  models.rs  monitor.rs  security.rs  session_state.rs  sftp.rs  ssh.rs  ssh_test.rs  ssh_utils.rs
src-tauri/src/repositories/: history.rs  mod.rs  servers.rs  settings.rs  snippets.rs
(+4 files in other folders)
