[package]
name = "NebulaSSH"
version = "0.2.0"
description = "nebula-ssh"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
ssh2 = "0.9"
portable-pty = "0.8"
sysinfo = "0.32"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
chrono = "0.4"
tauri-plugin-dialog = "2.4.2"
dirs = "6.0.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"


